# pulumi-prodvana

./: .golangci.yml  BRIDGING_README.md  Makefile  README.md  go.work.sum  license.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
deployment-templates/: .goreleaser.yml  upgrade-provider.yml
docs/: _index.md  installation-configuration.md
examples/: examples_nodejs_test.go  go.mod
examples/application/py/: __main__.py
examples/application/ts/: index.ts  package-lock.json
provider/: go.mod  go.sum  resources.go
provider/cmd/pulumi-resource-prodvana/: bridge-metadata.json  main.go  schema.json
provider/cmd/pulumi-tfgen-prodvana/: main.go
pulumi_prodvana/: cluster.py  k8s.py  linkerd-viz-values-ha.yaml  linkerd2-values-ha.yaml  network.py  projects.py  service_accounts.py  services.py
pulumi_prodvana/eks/: __init__.py  cluster.py
sdk/: go.mod
sdk/dotnet/: Application.cs  GetApplication.cs  GetK8sRuntime.cs  GetReleaseChannel.cs  K8sRuntime.cs  ManagedK8sRuntime.cs  Provider.cs  Pulumi.Prodvana.csproj  README.md  ReleaseChannel.cs  RuntimeLink.cs  Utilities.cs
sdk/dotnet/Config/: Config.cs
sdk/dotnet/Inputs/: GetK8sRuntimeLabel.cs  GetK8sRuntimeLabelArgs.cs  GetReleaseChannelConstant.cs  GetReleaseChannelConstantArgs.cs  (+136 more)
sdk/nodejs/: README.md  application.ts  getApplication.ts  getK8sRuntime.ts  getReleaseChannel.ts  index.ts  k8sRuntime.ts  managedK8sRuntime.ts  package.json  provider.ts  releaseChannel.ts  runtimeLink.ts  tsconfig.json  utilities.ts
sdk/python/: setup.py
(+91 files in other folders)
